--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build": "npm-run-all build:sass build:scripts build:eleventy",
     "watch:eleventy": "npx @11ty/eleventy --serve",
     "build:eleventy": "npx @11ty/eleventy",
-    "watch:scripts": "esbuild \"./src/assets/js/main.js\" --target=es6 --bundle --outfile=\"./dist/assets/js/main.bundle.js\"",
-    "build:scripts": "esbuild \"./src/assets/js/main.js\" --target=es6 --bundle --minify --outfile=\"./dist/assets/js/main.bundle.js\"",
-    "watch:sass": "sass --no-source-map --watch src/assets/scss:dist/assets/css/",
-    "build:sass": "sass --no-source-map src/assets/scss/main.scss dist/assets/css/main.css",
-    "clean": "rimraf './dist'",
+    "watch:scripts": "esbuild \"./src/assets/js/main.js\" --target=es6 --bundle --outfile=\"./docs/assets/js/main.bundle.js\"",
+    "build:scripts": "esbuild \"./src/assets/js/main.js\" --target=es6 --bundle --minify --outfile=\"./docs/assets/js/main.bundle.js\"",
+    "watch:sass": "sass --no-source-map --watch src/assets/scss:docs/assets/css/",
+    "build:sass": "sass --no-source-map src/assets/scss/main.scss docs/assets/css/main.css",
+    "clean": "rimraf './docs'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
